<resources>

    <string name="app_name">lingo</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Lingo calculator</string>
    <string name="aantal_nog_te_trekken_ballen">Aantal nog te trekken ballen:</string>
    <string name="minus_one">-1</string>
    <string name="zero">0</string>
    <string name="plus_one">+1</string>
    <string name="kans_op_lingo">Kans op Lingo:</string>
    <string name="zero_percentage">0%</string>
    <string name="even">Even</string>
    <string name="odd">Oneven</string>

</resources>